<resources>
    <string name="app_name">Recipe</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_settings">Settings</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="title_activity_add_recipe">AddRecipe</string>
    <string name="recipe_tag">Tag Your Recipe</string>
    <string name="recipe_image_desc">Image of the recipe.</string>
    <string name="recipe_tag_hint">Type to find tags</string>
    <string name="recipe_instruction_hint">How to prepare the recipe...</string>
    <string name="recipe_instruction_text">Instructions</string>
    <string name="recipe_name_hint">Name of the recipe</string>
    <string name="recipe_name_text">Recipe Name</string>
    <string name="recipe_upload_image_text">Upload Image</string>
    <string name="recipe_camera_image_desc">Take a picture and upload.</string>
    <string name="recipe_gallery_image_desc">Pick an image from gallery</string>
    <string name="auto_complete_item_image">Image indicating the item of the dropdown.</string>
    <string name="google_maps_API_key" translatable="false">AIzaSyADaIOUCQUuKrJcmpmhgdTzIfufKQ2GY5Q</string>
    <string name="submit">Submit</string>
    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string-array name="names">
        <item>(ingredient 1)</item>
        <item>Egg</item>
        <item>Lettuce</item>
        <item>Ham</item>
        <item>Broccoli</item>
    </string-array>

    <string name="AUTO_COMPLETE_ADAPTER_SELECTED_VALUES_KEY">SELECTED_VALUES_KEY</string>
    <string name="AUTO_COMPLETE_ADAPTER_CONNECTED_ADAPTER_KEY">CONNECTED_ADAPTER_KEY</string>


</resources>
