<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.recipeapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.recipeapp.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.example.recipeapp.ui.settings.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/input_Ingredients"
        android:name="com.example.recipeapp.Input_Ingredients"
        android:label="Input Ingredients"
        tools:layout="@layout/fragment_input_ingredients" />
    <fragment
        android:id="@+id/addRecipe"
        android:name="com.example.recipeapp.AddRecipe"
        android:label="Add Recipe"
        tools:layout="@layout/fragment_add_recipe" />
    <fragment
        android:id="@+id/viewRecipe"
        android:name="com.example.recipeapp.ViewRecipe"
        android:label="View Recipe"
        tools:layout="@layout/fragment_view_recipe" />
</navigation>