<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/fab_margin"
    tools:context=".AddEditRecipe">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ProgressBar
            android:id="@+id/dataLoadingBar"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"
            />

        <LinearLayout
            android:id="@+id/recipeForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/recipe_name_text"
                android:textSize="18sp"
                android:textColor="#030001"
                android:textStyle="bold"
                app:endIconMode="clear_text"
                />

            <EditText
                android:id="@+id/recipeName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="-4dp"
                android:hint="@string/recipe_name_hint"
                android:inputType="textPersonName"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="Cuisine"
                android:textColor="#030001"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <Spinner
                android:id="@+id/cuisine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginStart="-8dp"

                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="Ingredients"
                android:textColor="#030001"
                android:textSize="18sp"
                android:textStyle="bold"
                />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:endIconMode="clear_text"
                >
                <EditText
                    android:id="@+id/ingredient"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textShortMessage"
                    android:hint="Type to add ingredients"
                    android:layout_marginStart="-4dp"
                    />

                <View
                    android:layout_width="0sp"
                    android:layout_height="0sp"
                    android:layout_weight="1"
                    />

                <!--
                    TODO
                    - Rounded corners
                    - Spacious / padded ripple effect
                -->
                <Button
                    android:id="@+id/addIngredient"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="-30dp"
                    android:clickable="true"
                    android:foreground="?attr/selectableItemBackgroundBorderless"
                    android:background="@android:drawable/ic_input_add"
                    app:backgroundTint="#000"
                    />
            </LinearLayout>

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/ingredientContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/recipe_instruction_text"
                android:textSize="18sp"
                android:textColor="#030001"
                android:textStyle="bold"
                />

            <EditText
                android:id="@+id/instructions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="90dp"
                android:ems="10"
                android:hint="@string/recipe_instruction_hint"
                android:gravity="start|top"
                android:inputType="textMultiLine" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:text="@string/recipe_upload_image_text"
                android:textSize="18sp"
                android:textColor="#030001"
                android:textStyle="bold"
                />

            <ImageView
                android:id="@+id/recipeImg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:contentDescription="@string/recipe_image_desc"
                android:visibility="gone"
                />

            <!-- TODO -->
            <!--
                Replace the followings with button(s) containing text
            -->

            <LinearLayout
                android:id="@+id/uploadImgBtnContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:orientation="horizontal"
                >

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/cameraBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:background="#00FFFFFF"
                    android:clickable="true"
                    android:contentDescription="@string/recipe_camera_image_desc"
                    android:focusable="true"
                    app:backgroundTint="@android:color/background_light"
                    app:srcCompat="@drawable/ic_menu_camera" />

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/galleryBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/fab_margin"
                    android:layout_marginLeft="@dimen/fab_margin"
                    android:layout_marginBottom="4dp"
                    android:background="#00FFFFFF"
                    android:clickable="true"
                    android:contentDescription="@string/recipe_gallery_image_desc"
                    android:focusable="true"
                    app:backgroundTint="@android:color/background_light"
                    app:srcCompat="@drawable/ic_menu_gallery" />
            </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/fab_margin"
                android:paddingStart="3dp"
                android:text="@string/recipe_tag"
                android:textSize="18dp"
                android:textColor="#030001"
                android:textStyle="bold"
                />

            <MultiAutoCompleteTextView
                android:id="@+id/recipeTagInput"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:completionThreshold="1"
                android:hint="@string/recipe_tag_hint"
                />

            <Button
                android:id="@+id/submitBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:paddingLeft="30dp"
                android:paddingTop="8dp"
                android:paddingRight="30dp"
                android:paddingBottom="8dp"
                android:text="@string/submit"
                android:textColor="#17308E"
                android:textSize="16sp"
                app:strokeColor="@color/colorPrimaryDark"
                app:strokeWidth="2dp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                android:layout_gravity="center"
                />

        </LinearLayout>

    </LinearLayout>


</ScrollView>
